@@ -2,6 +2,7 @@
     * supported space in url with http digest
     * Request.construct_url improvement
     * fix inconsistent return statements
+    * fix parsing empty form error and Request.has_body property
 
 ==== 2.3.2 ====
     * mypy support
